--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -1,6 +1,6 @@
 <h2 class="page-header">Search Authors</h2>
 <form action="/authors" method="GET">
-  <div class="for-row">
+  <div class="form-row">
     <div class="form-item">
       <label>Name</label>
       <input type="text" name="name" value="<%= searchOptions.name %>">
@@ -21,3 +21,5 @@
     </div>
   </div>
 <% }) %>  
+
+
