--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,6 @@
 <h2 class="page-header">Recently Added</h2>
 <%- include('partials/bookGrid', { books: books, large: true }) %>
+<h1>Hello, <%= name %> </h1>
+<form action="/auth/logout?_method=DELETE" method="POST">
+  <button type="submit">Log Out</button>
+</form>
