--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -3,16 +3,19 @@
   <div class="error-message"><%= messages.error %></div>
 <% } %>  
 <form action="/auth/login" method="POST">
-  <div>
-    <label for="email">Email</label>
-    <input type="email" id="email" name="email" required>
+  <div class="form-row">
+    <div class="form-item">
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email" required>
+    </div>
   </div>
-  <div>
-    <label for="password">Password</label>
-    <input type="password" id="password" name="password" required>
+  <div class="form-row">
+    <div class="form-item">
+      <label for="password">Password</label>
+      <input type="password" id="password" name="password" required>
+    </div>
   </div>
-  <button type="submit">Login</button>
+  <button class="btn btn-primary" type="submit">Login</button>
 </form>
-
-<p>If you don't have account yet click button below</p>
-<a href="/auth/register">Register</a>
+<p>Don't have an account?</p>
+<a class="btn btn-primary" href="/auth/register">Register</a>
