--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,7 @@
       <li><a href="/authors/new">Add Author</a></li>
       <li><a href="/books">Books</a></li>
       <li><a href="/books/new">Add Book</a></li>
-      <li><a href="/auth/login">Login</a></li>
+      <li><a href="/profile">Profile</a></li>
     </ul>
   </nav>
 </header>
