--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -1,18 +1,18 @@
 <h2 class="page-header">Register</h2>
-<% if (messages.error) { %>
-  <div class="error-message"><%= messages.error %></div>
+<% if (registerError) { %>
+  <div class="error-message"><%= registerError %></div>
 <% } %>  
 <form action="/auth/register" method="POST">
   <div class="form-row">
     <div class="form-item">
       <label for="name">Name</label>
-      <input type="text" id="name" name="name" required>
+      <input type="text" id="name" name="name" value="<%= locals.name %>" required>
     </div>
   </div>
   <div class="form-row">
     <div class="form-item">
       <label for="email">Email</label>
-      <input type="email" id="email" name="email" required>
+      <input type="email" id="email" name="email" value="<%= locals.email %>" required>
     </div>
   </div>
   <div class="form-row">
